[package]
name = "cargo-hfmp"
version = "1.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["hexfellow", "ota"]
description = "A tool to pack plain MCU binary into hexfellow OTA format"
repository = "https://github.com/hexfellow/cargo-hfmp"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]

[dependencies]
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.41.0", features = ["full"] }
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
anyhow = "1.0.91"
build-time = "0.1.3"
thiserror = "1.0.65"
log = { version = "0.4.22", features = ["std"] }

lazy_static = "1.4.0"
random = "0.14.0"
crc = "3.2.1"
rand = "0.9.1"
zerocopy = { version = "0.8.13", features = ["derive"] }
colored = "2.1.0"
toml = "0.8.22"
static_assertions = "1.1.0"
chrono = "0.4.41"
